--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,8 +15,22 @@ body {
   width: 100%;
   height: 100vh; }
 
+.full-absolute {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
 .banner__block {
-  padding: 5rem 0 2rem; }
+  padding: 0 0 2rem; }
+
+.banner-container {
+  height: calc(100vh - 2rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10rem; }
 
 .btn {
   outline: none;
@@ -56,7 +70,8 @@ body {
 .slider {
   position: fixed;
   bottom: 2rem;
-  width: 100%; }
+  width: 100%;
+  z-index: 10; }
 
 .slider-container {
   display: flex;
@@ -65,17 +80,19 @@ body {
 .slider--item {
   margin: 0 .5rem;
   background-color: white;
-  border-radius: 3px;
+  border-radius: 5px;
   overflow: hidden;
-  cursor: pointer; }
+  cursor: pointer;
+  border: 2px solid black; }
   .slider--item:hover .slider-description__block {
     visibility: visible;
     opacity: 1; }
   .slider--item:hover .slider-background {
     transform: scale(1.2); }
 
-.slide-active {
-  border: 1px solid greenyellow; }
+.slide-active .slider-description__block {
+  visibility: visible;
+  opacity: 1; }
 
 .slider__block {
   position: relative;
@@ -85,7 +102,7 @@ body {
 .slider-description__block {
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.2s linear,  opacity 0.2s linear;
+  transition: visibility 0.25s linear,  opacity 0.25s linear;
   position: absolute;
   top: 0;
   right: 0;
@@ -93,11 +110,12 @@ body {
   background-color: rgba(0, 0, 0, 0.75);
   box-shadow: 0px 14px 20px -8px rgba(0, 0, 0, 0.75);
   padding: 1rem;
-  z-index: 2;
+  z-index: 11;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px; }
 
 .slider-title {
+  text-align: center;
   font-size: 2rem;
   color: white;
   font-weight: 600; }
@@ -127,16 +145,266 @@ body {
   background-image: url(../assets/images/word-counter.png); }
 
 .home__banner {
-  background: linear-gradient(to right, #fc5c7d, #6a82fb); }
+  background: linear-gradient(248deg, #08f6b9, #f608c8);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite; }
 
 .caesar-cipher__banner {
-  background: linear-gradient(to right, #333333, #dd1818); }
+  background: linear-gradient(248deg, #200122, #6f0000);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite; }
 
 .repeat-after-me__banner {
-  background: linear-gradient(to right, #c9d6ff, #e2e2e2); }
+  background: linear-gradient(248deg, #ECE9E6, #FFFFFF);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite; }
 
 .word-counter__banner {
-  background: linear-gradient(to right, #00f260, #0575e6); }
+  background: linear-gradient(305deg, #b967eb, #3c94f2);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite; }
 
 .coming-soon__banner {
-  background: linear-gradient(to right, #3c3b3f, #605c3c); }
+  background: linear-gradient(305deg, #000000, #434343);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite; }
+
+@keyframes GradientAnimation {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+.caesar-input-container {
+  max-width: 1100px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between; }
+
+.caesar-input_block {
+  flex: 0 0 40%; }
+
+.caesar-textarea {
+  width: 100%;
+  height: 30rem;
+  background-color: white;
+  font-size: 1.6rem;
+  padding: 1rem;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  resize: none; }
+
+.caesar-value__block {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 15%; }
+
+.caesar-value--item {
+  width: 100%;
+  margin-bottom: 1.5rem; }
+
+.caesar-select {
+  width: 100%;
+  height: 3.5rem;
+  font-size: 1.5rem;
+  border-radius: 3px;
+  margin-top: 0.7rem;
+  outline: none;
+  cursor: pointer; }
+
+.caesar-chipe__select-option {
+  cursor: pointer; }
+
+.caesar-btn {
+  width: 100%;
+  background-color: inherit;
+  border: 2px solid white;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.8rem;
+  padding: 1.5rem 0;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-top: 2rem; }
+  .caesar-btn:hover {
+    background-color: white;
+    color: #6f0000; }
+
+.cipher-result {
+  background-color: #f5f5f5; }
+
+.label_caesar {
+  font-size: 1.2rem;
+  color: white;
+  font-weight: 500; }
+
+.blocks-container {
+  width: 30rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.block--item {
+  width: 9.5rem;
+  height: 9.5rem;
+  border-radius: 3px;
+  background-image: linear-gradient(90deg, #999 0%, #777 100%);
+  cursor: pointer;
+  margin-bottom: 6px;
+  position: relative; }
+
+.block--item:hover {
+  background-image: linear-gradient(90deg, #6e6e6e 0%, #636363 100%); }
+
+.block__color {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: none; }
+
+.black {
+  background-image: linear-gradient(90deg, #4e4e4e 0%, #222222 100%); }
+
+.orange {
+  background-image: linear-gradient(90deg, #ffb23d 0%, #ff9f0e 100%); }
+
+.yellow {
+  background-image: linear-gradient(90deg, #faf876 0%, #fbff13 100%); }
+
+.blue {
+  background-image: linear-gradient(90deg, #3c88fa 0%, #019aff 100%); }
+
+.green {
+  background-image: linear-gradient(90deg, #5bf856 0%, #04ff04 100%); }
+
+.red {
+  background-image: linear-gradient(90deg, #fd5555 0%, #fa0808 100%); }
+
+.purple {
+  background-image: linear-gradient(90deg, #e43cdb 0%, #dd06fa 100%); }
+
+.cyan {
+  background-image: linear-gradient(90deg, #51ebff 0%, #0fe3ff 100%); }
+
+.white {
+  background-image: linear-gradient(90deg, #fff 0%, #f3f1f1 100%); }
+
+.blocks_title {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.title__value {
+  font-size: 3.5rem;
+  text-align: center; }
+
+.title-button_block {
+  margin-top: 1.5rem; }
+
+.title-ready__btn {
+  outline: none;
+  border: 1px solid black;
+  background-color: inherit;
+  color: black;
+  padding: 1rem 4rem;
+  border-radius: 3px;
+  text-transform: uppercase;
+  transition: all 0.3s;
+  cursor: pointer; }
+
+.title-ready__btn:hover {
+  background-color: black;
+  color: white; }
+
+.title-ready__btn:disabled {
+  background-color: #777;
+  color: white; }
+
+.blocks-score {
+  margin-top: 2rem;
+  font-size: 1.5rem; }
+
+.block_display {
+  display: block; }
+
+.popup-background {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100; }
+
+.popup {
+  max-width: 400px;
+  width: 100%;
+  background-color: white;
+  border-radius: 4px; }
+
+.popup-container {
+  width: 100%;
+  padding: 2.5rem; }
+
+.popup-title_block {
+  text-align: center;
+  margin-bottom: 3rem; }
+
+.popup-title_value {
+  font-size: 2.4rem;
+  font-weight: bold; }
+
+.input-label_block {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 1.5rem; }
+
+.input-label {
+  font-size: 1.2rem;
+  margin-bottom: 7px; }
+
+.login-input {
+  padding: 1.2rem 1.5rem;
+  outline: none;
+  border-bottom: 1px solid  gainsboro; }
+
+.login-popup--nav {
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center; }
+
+.popup-nav__text {
+  font-size: 1.4rem; }
+
+.popup-nav-link {
+  margin-left: 3px;
+  font-size: 1.6rem;
+  color: lightskyblue;
+  font-weight: bold;
+  cursor: pointer; }
+
+.popup-button__block {
+  display: flex;
+  justify-content: center; }
+
+.popup-btn {
+  padding: 1.2rem 5rem;
+  background-color: lightskyblue;
+  border: 1px solid lightskyblue;
+  font-size: 1.6rem;
+  letter-spacing: 0.22px;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 3rem;
+  transition: all 0.3s; }
+  .popup-btn:hover {
+    background-color: white;
+    color: lightskyblue; }
