--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,8 +20,24 @@ body {
 	height: 100vh;
 }
 
+.full-absolute {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
 .banner__block {
-	padding: 5rem 0 2rem;
+	padding: 0 0 2rem;
+}
+
+.banner-container {
+	height: calc(100vh - 2rem);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 10rem;
 }
 
 .btn {
@@ -71,6 +87,7 @@ body {
 	position: fixed;
 	bottom: 2rem;
 	width: 100%;
+	z-index: 10;
 }
 
 .slider-container {
@@ -81,9 +98,10 @@ body {
 .slider--item {
 	margin: 0 .5rem;
 	background-color: white;
-	border-radius: 3px;
+	border-radius: 5px;
 	overflow: hidden;
 	cursor: pointer;
+	border: 2px solid black;
 
 	&:hover .slider-description__block {
 		visibility: visible;
@@ -95,8 +113,9 @@ body {
 	}
 }
 
-.slide-active {
-	border: 1px solid greenyellow;
+.slide-active .slider-description__block {
+	visibility: visible;
+	opacity: 1;
 }
 
 .slider__block {
@@ -108,8 +127,8 @@ body {
 .slider-description__block {
 	visibility: hidden;
   opacity: 0;
-	transition: visibility 0.2s linear, 
-							opacity 0.2s linear;
+	transition: visibility 0.25s linear, 
+							opacity 0.25s linear;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -117,12 +136,13 @@ body {
 	background-color: rgba(0, 0, 0, .75);
 	box-shadow: 0px 14px 20px -8px rgba(0, 0, 0, .75);
 	padding: 1rem;
-	z-index: 2;
+	z-index: 11;
 	border-bottom-left-radius: 6px;
 	border-bottom-right-radius: 6px;
 }
 
 .slider-title {
+	text-align: center;
 	font-size: 2rem;
 	color: white;
 	font-weight: 600;
@@ -141,6 +161,7 @@ body {
 	z-index: 0;
 }
 
+
 .coming-soon__slider--item {
 	background-image: url(../assets/images/coming-soon.png);
 }
@@ -158,21 +179,344 @@ body {
 }
 
 .home__banner {
-	background: linear-gradient(to right, #fc5c7d, #6a82fb); 
+	background: linear-gradient(248deg, #08f6b9, #f608c8);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite;
 }
 
 .caesar-cipher__banner {
-	background: linear-gradient(to right, #333333, #dd1818);
+	background: linear-gradient(248deg, #200122, #6f0000);
+	background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite;
 }
 
 .repeat-after-me__banner {
-	background: linear-gradient(to right, #c9d6ff, #e2e2e2); 
+	background: linear-gradient(248deg, #ECE9E6, #FFFFFF); 
+	background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite;
 }
 
 .word-counter__banner {
-	background: linear-gradient(to right, #00f260, #0575e6);
+	background: linear-gradient(305deg, #b967eb, #3c94f2);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite;
 }
 
 .coming-soon__banner {
-	background: linear-gradient(to right, #3c3b3f, #605c3c);
+	background: linear-gradient(305deg, #000000, #434343);
+  background-size: 400% 400%;
+  animation: GradientAnimation 25s ease infinite;
+}
+
+@keyframes GradientAnimation {
+	0% {
+		background-position:0% 50%;
+	}
+
+	50% { 
+		background-position:100% 50%;
+	}
+
+	100% {
+		background-position:0% 50%;
+	}
+}
+
+//-------------------------------------------------
+//-------------------------------------------------
+//-----------------CAESAR CIPHER-------------------
+//-------------------------------------------------
+//-------------------------------------------------
+
+.caesar-input-container {
+	max-width: 1100px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.caesar-input_block {
+	flex: 0 0 40%;
+}
+
+.caesar-textarea {
+	width: 100%;
+	height: 30rem;
+	background-color: white;
+	font-size: 1.6rem;
+	padding: 1rem;
+	border-radius: 5px;
+	border: none;
+	outline: none;
+	resize: none
+}
+
+.caesar-value__block {
+	display: flex;
+	flex-direction: column;
+	flex: 0 0 15%;
+}
+
+.caesar-value--item {
+	width: 100%;
+	margin-bottom: 1.5rem;
+}
+
+.caesar-select {
+	width: 100%;
+	height: 3.5rem;
+	font-size: 1.5rem;
+	border-radius: 3px;
+	margin-top: 0.7rem;
+	outline: none;
+	cursor: pointer;
+}
+
+.caesar-chipe__select-option {
+	cursor: pointer;
+}
+
+.caesar-btn {
+	width: 100%;
+	background-color: inherit;
+	border: 2px solid white;
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 1.8rem;
+	padding: 1.5rem 0;
+	border-radius: 4px;
+	outline: none;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	margin-top: 2rem;
+	
+	&:hover {
+	background-color: white;
+	color: #6f0000;
+	}
+}
+
+.cipher-result {
+	background-color: #f5f5f5;
+}
+
+.label_caesar {
+	font-size: 1.2rem;
+	color: white;
+	font-weight: 500;
+}
+
+//-------------------------------------------------
+//-------------------------------------------------
+//-----------------REPEAT AFTER ME-----------------
+//-------------------------------------------------
+//-------------------------------------------------
+
+.blocks-container {
+  width: 30rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.block--item {
+  width: 9.5rem;
+  height: 9.5rem;
+  border-radius: 3px;
+  background-image: linear-gradient(90deg, #999 0%, #777 100%);
+  cursor: pointer;
+  margin-bottom: 6px;
+  position: relative;
+}
+
+.block--item:hover {
+  background-image: linear-gradient(90deg, rgb(110, 110, 110) 0%, rgb(99, 99, 99) 100%);
+}
+
+.block__color {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: none;
+}
+
+.black {
+  background-image: linear-gradient(90deg, rgb(78, 78, 78) 0%, rgb(34, 34, 34) 100%);
+}
+
+.orange {
+  background-image: linear-gradient(90deg, rgb(255, 178, 61) 0%, rgb(255, 159, 14) 100%);
+}
+
+.yellow{
+  background-image: linear-gradient(90deg, rgb(250, 248, 118) 0%, rgb(251, 255, 19) 100%);
+}
+
+.blue {
+  background-image: linear-gradient(90deg, rgb(60, 136, 250) 0%, rgb(1, 154, 255) 100%);
+}
+
+.green {
+  background-image: linear-gradient(90deg, rgb(91, 248, 86) 0%, rgb(4, 255, 4) 100%);
+}
+
+.red {
+  background-image: linear-gradient(90deg, rgb(253, 85, 85) 0%, rgb(250, 8, 8) 100%);
+}
+
+.purple {
+  background-image: linear-gradient(90deg, rgb(228, 60, 219) 0%, rgb(221, 6, 250) 100%);
+}
+
+.cyan {
+  background-image: linear-gradient(90deg, rgb(81, 235, 255) 0%, rgb(15, 227, 255) 100%);
+}
+
+.white {
+  background-image: linear-gradient(90deg, #fff 0%, rgb(243, 241, 241) 100%);
+}
+
+.blocks_title {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title__value {
+  font-size: 3.5rem;
+  text-align: center;
+}
+
+.title-button_block {
+  margin-top: 1.5rem;
+}
+
+.title-ready__btn {
+  outline: none;
+  border: 1px solid black;
+  background-color: inherit;
+  color: black;
+  padding: 1rem 4rem;
+  border-radius: 3px;
+  text-transform: uppercase;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.title-ready__btn:hover {
+  background-color: black;
+  color: white;
+}
+
+.title-ready__btn:disabled {
+  background-color: #777;
+  color: white;
+}
+
+.blocks-score {
+  margin-top: 2rem;
+  font-size: 1.5rem;
+}
+
+.block_display {
+  display: block;
+}
+
+//-------------------------------------------------
+//-------------------------------------------------
+//-----------------POPUP---------------------------
+//-------------------------------------------------
+//-------------------------------------------------
+
+
+.popup-background {
+	background-color: rgba(0, 0, 0, .4);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+}
+
+.popup {
+	max-width: 400px;
+	width: 100%;
+	background-color: white;
+	border-radius: 4px;
+}
+
+.popup-container {
+	width: 100%;
+	padding: 2.5rem;
+}
+
+.popup-title_block {
+	text-align: center;
+	margin-bottom: 3rem;
+}
+
+.popup-title_value {
+	font-size: 2.4rem;
+	font-weight: bold;
+}
+
+.input-label_block {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	margin-bottom: 1.5rem;
+}
+
+.input-label {
+	font-size: 1.2rem;
+	margin-bottom: 7px;
+}
+
+.login-input {
+	padding: 1.2rem 1.5rem;
+	outline: none;
+	border-bottom: 1px solid  gainsboro;
+}
+
+.login-popup--nav {
+	margin-bottom: 2rem;
+	display: flex;
+	align-items: center;
+}
+
+.popup-nav__text {
+	font-size: 1.4rem;
+}
+
+.popup-nav-link {
+	margin-left: 3px;
+	font-size: 1.6rem;
+	color: lightskyblue;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.popup-button__block {
+	display: flex;
+	justify-content: center;
+}
+
+.popup-btn {
+	padding: 1.2rem 5rem;
+	background-color: lightskyblue;
+	border: 1px solid lightskyblue;
+	font-size: 1.6rem;
+	letter-spacing: 0.22px;
+	text-transform: uppercase;
+	color: white;
+	border-radius: 3rem;
+	transition: all 0.3s;
+
+	&:hover {
+		background-color: white;
+		color: lightskyblue;
+	}
 }
