--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -372,7 +372,8 @@ body {
   margin-bottom: 7px; }
 
 .login-input {
-  padding: 1.2rem 1.5rem;
+  padding: 1.2rem 0.3rem;
+  font-size: 1.4rem;
   outline: none;
   border-bottom: 1px solid  gainsboro; }
 
