--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -476,7 +476,8 @@ body {
 }
 
 .login-input {
-	padding: 1.2rem 1.5rem;
+	padding: 1.2rem 0.3rem;
+	font-size: 1.4rem;
 	outline: none;
 	border-bottom: 1px solid  gainsboro;
 }
