--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ table {
 
 input[type="button" i], input[type="submit" i], input[type="reset" i], input[type="file" i]::-webkit-file-upload-button, button {
     padding: unset;
+    cursor: pointer;
 }
 
 input[type=number],
